# FastAPI-Template

./: pyproject.toml  tox.ini
.github/workflows/: ci.yml
